@@ -43,10 +43,11 @@ override_dh_auto_clean:
 	rm -f zotero-standalone-build/modules/zotero-libreoffice-integration/build/oxt/Zotero.jar
 
 # Update the following variables for each new upstream release
-COMMIT_VERSION=4.0.29.16+dfsg
-Z_COMMIT=55ee55ed7b
-ZB_COMMIT=171117f0c7
-ZSB_COMMIT=0e725a7e9c
+# 5.0.33 tag was on 2017 Dec 19
+COMMIT_VERSION=5.0.33+dfsg
+Z_COMMIT=22d3fbb
+ZB_COMMIT=b330e8e
+ZSB_COMMIT=9b0d0b3
 
 get-orig-source:
 	if [ "$(DEB_VERSION_UPSTREAM)" != "$(COMMIT_VERSION)" ]; then \
