@@ -1,6 +1,7 @@
 zotero-standalone-build (5.0.33+dfsg-1) unstable; urgency=medium
 
   * New upstream release.
+    - Update zotero commit IDs in d/rules
 
  -- Diane Trout <diane@ghic.org>  Thu, 18 Jan 2018 09:36:41 -0800
 
